FIX / stopmotion format select too short

--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -641,6 +641,10 @@ select {
     background-color: var(--active-color);
     color: white;
   }
+
+  &[size="small"] {
+    padding-right: calc(var(--spacing) / 2 + 1.5rem);
+  }
 }
 
 input[type="file"] {
